--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
     "@google/generative-ai": "^0.21.0",
-    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   }
